--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
                 <li id="navright"><a href=""><button>buy now</button></a></li>
             </div>
         </nav>
-
+        
+<!-- hero section here! -->
         <section id="herosection">
             <div id="hero_top" >
 
@@ -62,8 +63,9 @@
     </section>
 
 
+<!-- content sections here! -->
     <section id="herosection">
-        <div id="hero" style="justify-content: space-between; flex-direction: row-reverse;">
+        <div id="hero" style=" flex-direction: row-reverse;">
             <div class="hero_right_content">
                 <img src="./assets/img/undraw_mobile_login_ikmv.png" alt="Product Image" />
             </div>
@@ -135,15 +137,15 @@
 
         </div>
     </section>
-
+<!-- prizing section -->
     <section class="pricing">
-        <div style="background-image: url(./assets/img/Rectangle.png); text-align: center; padding: 10%;">
-            <h3>A Price To Suit Everyone</h3><br>
+        <div id="price" >
+            <h3>A Price To Suit Everyone</h3>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam quod magnam quis repellat, exercitationem
                 fugit quisquam repudiandae, eaque culpa, pariatur sed vel itaque quo. Laboriosam rem iste quaerat
-                officia ab.</p><br>
+                officia ab.</p>
             <br><br>
-            <h1>$40</h1>
+            <h2>$40</h2>
             <p>UI Design Kit</p>
             <br><br>
             <p>See, One price. Simple.</p>
@@ -152,10 +154,11 @@
 
     </section>
 
+<!-- footer section -->
     <section class="footer" style="background: #E7ECFF; margin-top: 0%;">
         <div style="display: flex; justify-content: space-around; padding-top: 5%;padding-bottom: 5%" class="container">
             <p style="float: left;">@2023 yorcompany</p>
-            <h1 style="text-align: center; font-size: 30px;"> landing</h1>
+            <h2 style="text-align: center; font-size: 30px;"> Landing</h2>
             <button style="float: right;">purchase now</button>
         </div>
         <hr>
