--- a/index.html
+++ b/index.html
@@ -187,15 +187,15 @@
     <section class="footer" style="background: #E7ECFF; margin-top: 0%;">
         <div  class="footer_container">
             <p style="float: left;">@2023 yorcompany</p>
-            <h2 style="text-align: center; font-size: 30px;"> Landing</h2>
+            <h2 style="text-align: center; "> Landing</h2>
             <button style="float: right;">purchase now</button>
         </div>
         <hr>
-        <div style="display: flex; justify-content: space-around; ">
+        <div class="bottom_footer" style="display: flex; justify-content: space-around; ">
             <div id="footer" style="list-style: none;">
-                <li id="navleft"><a href="">Home</a></li>
-                <li id="navleft"><a href="">About</a></li>
-                <li id="navleft"><a href="">Contact</a></li>
+                <li id="navleft"><a href=""><p>Home</p></a></li>
+                <li id="navleft"><a href=""><p>About</p></a></li>
+                <li id="navleft"><a href=""><p>Contact</p></a></li>
             </div>
             <div id="icons" style="list-style: none;">
                 <li id="navleft"><a href=""><img src="./assets/img/fb.png" alt=""></a></li>
